# leap_mappings

./: .gitignore  AGENTS.md  README.md  Untitled-1.md  environment.yml  old gent chat.txt  prompts 5-7.md  pyproject.toml
codebase/: __init__.py  for_colleagues_export_workflow.py  leap_mapping_refresh_workflow.py  mapping_issue_exceptions.py  outlook_mapping_maintenance_workflow.py  propagate_esto_rows_workflow.py  regen_common_esto_comparison_fast_path_workflow.py  run_mapping_pipeline.py
config/: 6AC9DA10  E0E85740  E2F1A260  all_demand_aggregated_components.csv  all_demand_aggregated_components.json  common_esto_label_overrides.csv  esto_external_definition_authority_working_set.xlsx  inverted_conservation_target_aliases.json  inverted_conservation_target_variants.json  leap_mappings.xlsx  leap_results_expected_sheets.json  mapping_coverage_gaps.csv  mapping_issue_exception_sets.xlsx  master_config.xlsx  missing_zero_branch_mapping_candidates.xlsx  outlook_mappings_master no ownuse.xlsx  outlook_mappings_master.xlsx  outlook_mappings_master.xlsx.bak_20260702_101512  source_branch_fallback_rules.csv
data/: README.md
docs/: QA plan.md  guide_outlook_mappings_master.md  improvement_todo.md  mappings_system.md  rollup_rules_system.md  special_rules_and_design_decisions.md  workflow_inventory.md
tests/: conftest.py  smoke_run.py  test_anchor_contribution_breakdown.py  test_apply_common_esto_structure.py  test_apply_ninth_to_esto_conversion.py  test_apply_partitioned_common_esto.py  test_build_common_esto_structure.py  test_build_dataset_tree_structure.py  (+30 more)
(+107 files in other folders)
