[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "leap-mappings"
version = "0.1.0"
description = "LEAP mapping maintenance workflows and mapping conversion utilities."
authors = [{ name = "LEAP Team" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "openpyxl",
    "matplotlib",
    "pywin32 ; platform_system == 'Windows'",
]

[project.urls]
Homepage = "https://example.com/leap-mappings"

[tool.setuptools.packages.find]
where = ["."]
include = ["codebase*"]
